--- a/.github/workflows/tag_and_pypi.yml
+++ b/.github/workflows/tag_and_pypi.yml
@@ -48,11 +48,28 @@ jobs:
           git tag $TAG_NAME
           git push origin $TAG_NAME
 
+# questa zione si attiva solo se quella subito prima ha creato un nuovo tag con successo
+  documentation:
+    runs-on: ubuntu-latest
+    needs: create_tag
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
+      - uses: actions/cache@v3
+        with:
+          key: ${{ github.ref }}
+          path: .cache
+      - run: pip install mkdocs-material
+      - run: pip install "mkdocstrings[python]"
+      - run: pip install pillow cairosvg
+      - run: mkdocs gh-deploy --force
 
 # This action will be triggered when you have created the documentation
   pypi_deploy:
     runs-on: ubuntu-latest
-    needs: create_tag
+    needs: documentation
     steps:
     - name: pypi-github-sync
       uses: PabloLec/pypi-github-sync@v1.0.2
